--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "php": "^8.2",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
-        "mozex/anthropic-laravel": "^1.0"
+        "mozex/anthropic-laravel": "^1.0",
+        "openai-php/laravel": "^0.10.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
